--- a/CanvasManifest.json
+++ b/CanvasManifest.json
@@ -102,7 +102,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 3,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "Phone",
@@ -120,7 +120,7 @@
     "ManualOfflineProfileId": "",
     "Name": "B_APP",
     "OriginatingVersion": "1.343",
-    "ParserErrorCount": 0,
+    "ParserErrorCount": 5,
     "ShowStatusBar": false
   },
   "PublishInfo": {
@@ -141,9 +141,10 @@
     "OneTaskShowScreen",
     "TaskEditScreen",
     "ChatScreen",
-    "RateScreen",
     "TaskScreen",
     "SettingScreen",
-    "ParentScreen"
+    "ParentScreen",
+    "RatingScreen",
+    "TrophyScreen"
   ]
 }
